remove extra logging & Update README